# mandelbrot_worker

./: Cargo.toml  Dockerfile
.cargo/: config.toml
src/: complex.rs  generate.rs  handlers.rs  lib.rs  main.rs  messages.rs
tests/: test_complex.rs
