[package]
name = "mandelbrot_worker"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Rastelli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }